--- a/LiveCamera/LiveCamera/Base.lproj/Main.storyboard
+++ b/LiveCamera/LiveCamera/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C48a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,7 +19,6 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iNE-CM-Xcu">
                                 <rect key="frame" x="0.0" y="293" width="600" height="238"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="237" id="AA4-Nu-Omu"/>
                                 </constraints>
@@ -29,14 +28,14 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dO6-NE-1lj">
-                                <rect key="frame" x="262" y="550" width="77" height="30"/>
-                                <animations/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dO6-NE-1lj">
+                                <rect key="frame" x="268" y="516" width="64" height="64"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="lcW-d1-rwe"/>
+                                    <constraint firstAttribute="height" constant="64" id="B3I-xB-KOm"/>
+                                    <constraint firstAttribute="width" constant="64" id="TZd-7V-VeD"/>
                                 </constraints>
-                                <state key="normal" title="Take Photo">
+                                <state key="normal" image="camera">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -46,14 +45,12 @@
                             </button>
                             <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="eJD-Yy-5Rt">
                                 <rect key="frame" x="0.0" y="33" width="600" height="238"/>
-                                <animations/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="238" id="Cko-2c-eKz"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="iNE-CM-Xcu" firstAttribute="centerX" secondItem="7ag-Cb-Osb" secondAttribute="centerX" id="3oU-zd-2y2"/>
@@ -62,10 +59,10 @@
                             <constraint firstItem="eJD-Yy-5Rt" firstAttribute="width" secondItem="7ag-Cb-Osb" secondAttribute="width" id="I9D-D2-fHa"/>
                             <constraint firstItem="dO6-NE-1lj" firstAttribute="top" secondItem="iNE-CM-Xcu" secondAttribute="bottom" constant="20" id="Mb4-TX-rd0"/>
                             <constraint firstItem="eJD-Yy-5Rt" firstAttribute="centerX" secondItem="7ag-Cb-Osb" secondAttribute="centerX" id="MbQ-OW-cck"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dO6-NE-1lj" secondAttribute="bottom" constant="20" id="Xjq-ti-Nab"/>
+                            <constraint firstItem="dO6-NE-1lj" firstAttribute="centerX" secondItem="7ag-Cb-Osb" secondAttribute="centerX" id="a73-wl-ZDu"/>
                             <constraint firstItem="iNE-CM-Xcu" firstAttribute="height" secondItem="eJD-Yy-5Rt" secondAttribute="height" id="ak7-sP-xcV"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dO6-NE-1lj" secondAttribute="bottom" constant="20" id="dMd-D3-sEF"/>
                             <constraint firstItem="iNE-CM-Xcu" firstAttribute="top" secondItem="eJD-Yy-5Rt" secondAttribute="bottom" constant="22" id="kLo-K3-A84"/>
-                            <constraint firstItem="dO6-NE-1lj" firstAttribute="centerX" secondItem="7ag-Cb-Osb" secondAttribute="centerX" id="rSw-RZ-hNT"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -83,4 +80,7 @@
             <point key="canvasLocation" x="542" y="365"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="64" height="64"/>
+    </resources>
 </document>
